Advance through list of waypoints automatically, play appropriate sounds to direct user as we receive location from GPS.
Also refactored out the sound-generation code (can't solve the clicking noise) and sanitized the Location logic and UI.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_waypoints">Waypoints</string>
     <string name="nextViewString">Next View</string>
     <string name="getCurrentLocation">getCurrentLocation</string>
+    <string name="back">\\/</string>
 
 </resources>
