Added more controls

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="nextViewString">Next View</string>
     <string name="getCurrentLocation">getCurrentLocation</string>
     <string name="back">\\/</string>
+    <string name="silence">silence</string>
 
 </resources>
